--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1974,7 +1974,8 @@ body, input, select, textarea {
 		text-decoration: none;
 		border-bottom: none;
 		position: relative;
-        color: #58514A;
+        color: /*#58514A*/ #5cc6a7;
+        font-size: 25px;
 	}
 
 		.icon:before {
@@ -2258,7 +2259,7 @@ body, input, select, textarea {
 				}
 
 				ul.labeled-icons li h3 {
-					color: #2B2926 ;
+					color: #2B2926  ;
 					left: 0;
 					position: absolute;
 					text-align: center;
